--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Vitals Tracker v1.19 -->
+<!-- Vitals Tracker v1.19A1 -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -119,16 +119,6 @@
       white-space:nowrap;
     }
 
-    /* v1.19: Red Exit button styling (handler unchanged) */
-    .btn.danger{
-      background: linear-gradient(180deg, rgba(255,70,70,.92), rgba(220,30,30,.72));
-      border-color: rgba(255,140,140,.55);
-      color: rgba(235,245,255,.92);
-    }
-
-    /* v1.19: Home ADD Reading label white (only) */
-    #btnGoAdd{ color: rgba(235,245,255,.92) !important; }
-
     .row{ display:flex; gap:12px; }
     .row.center{ align-items:center; }
     .grow{ flex:1; }
@@ -223,18 +213,19 @@
       font-size:16px;
     }
 
+    /* v1.19A1: tighten symptoms vertically */
     .symGrid{
       display:grid;
       grid-template-columns: 1fr 1fr;
-      gap: 6px 18px;
-      padding: 6px 2px 2px;
-      margin-top: 2px;
+      gap: 4px 14px;          /* tighter */
+      padding: 2px 2px 0;      /* tighter */
+      margin-top: 0;           /* tighter */
     }
     .symItem{
       display:flex;
       align-items:center;
       gap:10px;
-      padding: 4px 6px;
+      padding: 2px 6px;        /* tighter */
       border-radius: 14px;
       transition: background .12s ease, border-color .12s ease;
     }
@@ -293,6 +284,11 @@
       gap: 6px;
     }
 
+    /* v1.19A1: reduce padding above log top buttons */
+    #log > .row.center{
+      margin-bottom: 4px; /* tighter space below the buttons row */
+    }
+
     /* Compact log entries (more items visible) */
     .entry{
       border:1px solid var(--stroke);
@@ -329,15 +325,15 @@
       align-items:baseline;
     }
 
-    /* Unified BP/HR label + readings to same smaller size */
+    /* v1.19A1: reduce size of BP/HR label + readings (tighter horizontal fit) */
     .bpBig{
-      font-size:24px;
+      font-size:20px;     /* reduced from 24 */
       font-weight:800;
       letter-spacing:.1px;
       white-space:nowrap;
     }
     .hrBig{
-      font-size:24px;
+      font-size:20px;     /* reduced from 24 */
       font-weight:800;
       color: rgba(235,245,255,.72);
       white-space:nowrap;
@@ -415,42 +411,6 @@
       margin: 0 4px 10px;
       width: fit-content;
     }
-
-    /* v1.19: Custom confirm modal (replaces native confirm for "Edit this entry?") */
-    .overlay{
-      position:fixed;
-      inset:0;
-      background: rgba(0,0,0,.55);
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding: 18px;
-      z-index: 9998;
-    }
-    .modal{
-      width:min(520px, 100%);
-      background: rgba(16,22,40,.94);
-      border:1px solid rgba(235,245,255,.18);
-      border-radius: 22px;
-      box-shadow: 0 18px 56px rgba(0,0,0,.55);
-      padding: 18px;
-      backdrop-filter: blur(10px);
-    }
-    .modalMsg{
-      font-size: 26px;   /* large for accessibility */
-      font-weight: 800;
-      letter-spacing: .2px;
-      color: rgba(235,245,255,.90);
-      margin: 8px 8px 14px;
-      line-height: 1.15;
-    }
-    .modalBtns{
-      display:flex;
-      gap:12px;
-      justify-content:flex-end;
-      flex-wrap:nowrap;
-      margin-top: 6px;
-    }
   </style>
 </head>
 
@@ -494,13 +454,13 @@
           <button id="btnInstall" class="btn small">Install</button>
           <button id="btnClearAll" class="btn small">Clear Data</button>
           <div class="grow"></div>
-          <button id="btnExitHome" class="btn small danger">Exit</button>
+          <button id="btnExitHome" class="btn small">Exit</button>
         </div>
 
         <div class="subtle">Data stays on your phone (local only).</div>
 
         <div class="footerTiny">
-          <div>v1.19</div>
+          <div>v1.19A1</div>
           <div>developed by Keyth Jyles</div>
         </div>
       </div>
@@ -585,22 +545,11 @@
 
   </div>
 
-  <!-- v1.19: Custom confirm modal (Edit this reading?) -->
-  <div id="confirmOverlay" class="overlay hidden" role="dialog" aria-modal="true" aria-labelledby="confirmMsg">
-    <div class="modal">
-      <div id="confirmMsg" class="modalMsg">Edit this reading?</div>
-      <div class="modalBtns">
-        <button id="confirmCancel" class="btn small">Cancel</button>
-        <button id="confirmOk" class="btn small primary">OK</button>
-      </div>
-    </div>
-  </div>
-
 <script>
 (() => {
   "use strict";
 
-  const APP_VERSION = "v1.19";
+  const APP_VERSION = "v1.19A1";
   const STORAGE_KEY = "vitals_tracker_records_v1";
   const SYMPTOMS = [
     "Sweaty","Dizzy","Panic","Brain fog","Chest tight","Headache",
@@ -726,71 +675,7 @@
   }
 
   /* =========================
-     v1.19: Custom confirm modal for "Edit this reading?"
-     ========================= */
-
-  const confirmState = {
-    open: false,
-    resolve: null,
-    prevFocus: null
-  };
-
-  function openConfirm(){
-    if(confirmState.open) return Promise.resolve(false);
-    confirmState.open = true;
-    confirmState.prevFocus = document.activeElement;
-
-    $("confirmOverlay").classList.remove("hidden");
-
-    // Focus OK for accessibility
-    setTimeout(() => { try{ $("confirmOk").focus({preventScroll:true}); }catch{} }, 0);
-
-    return new Promise((resolve) => {
-      confirmState.resolve = resolve;
-    });
-  }
-
-  function closeConfirm(answer){
-    if(!confirmState.open) return;
-    confirmState.open = false;
-    $("confirmOverlay").classList.add("hidden");
-
-    const res = confirmState.resolve;
-    confirmState.resolve = null;
-
-    // Restore prior focus
-    try{ confirmState.prevFocus && confirmState.prevFocus.focus && confirmState.prevFocus.focus({preventScroll:true}); }catch{}
-
-    if(res) res(!!answer);
-  }
-
-  $("confirmCancel").addEventListener("click", () => closeConfirm(false));
-  $("confirmOk").addEventListener("click", () => closeConfirm(true));
-
-  // Click outside modal = cancel
-  $("confirmOverlay").addEventListener("click", (e) => {
-    if(e.target === $("confirmOverlay")) closeConfirm(false);
-  });
-
-  // Keyboard handling
-  window.addEventListener("keydown", (e) => {
-    if(!$("confirmOverlay")) return;
-    if($("confirmOverlay").classList.contains("hidden")) return;
-
-    if(e.key === "Escape"){
-      e.preventDefault();
-      closeConfirm(false);
-      return;
-    }
-    if(e.key === "Enter"){
-      e.preventDefault();
-      closeConfirm(true);
-      return;
-    }
-  });
-
-  /* =========================
-     Symptoms UI (unchanged)
+     Symptoms UI (unchanged behavior)
      ========================= */
 
   const symGrid = $("symGrid");
@@ -942,7 +827,7 @@
   }
 
   /* =========================
-     Log filtering + render (unchanged except confirm replacement)
+     Log filtering + render (unchanged)
      ========================= */
 
   function recordMatches(rec, q){
@@ -1027,21 +912,19 @@
 
       e.addEventListener("pointercancel", clearPressed);
 
-      e.addEventListener("pointerup", async () => {
+      e.addEventListener("pointerup", () => {
         if(!armed) return;
         e.classList.remove("pressed");
         armed = false;
 
-        const ok = await openConfirm();
-        closeConfirm(ok); // ensures overlay closes if still open
+        const ok = confirm("Edit this entry?");
         if(ok) enterAddEdit(r.ts);
       });
 
-      e.addEventListener("keydown", async (ev) => {
+      e.addEventListener("keydown", (ev) => {
         if(ev.key === "Enter" || ev.key === " "){
           ev.preventDefault();
-          const ok = await openConfirm();
-          closeConfirm(ok);
+          const ok = confirm("Edit this entry?");
           if(ok) enterAddEdit(r.ts);
         }
       });
@@ -1863,3 +1746,15 @@ self.addEventListener('fetch', (e)=>{ });`;
 </script>
 </body>
 </html>
+
+<!--
+Vitals Tracker v1.19A1
+Base: v1.18A82
+Changes:
+- Reduced BP/HR label+reading size in log entries (24px → 20px) to fit more readings.
+- Reduced space below the Log top button row.
+- Tightened Symptoms grid vertical spacing (gap/padding/item padding) to reclaim room.
+Notes for future edits:
+- Keep Exit handler exactly as-is (known-good).
+- Keep chart min zoom span at 48 hours and full pan across the 7-day base window.
+-->
